fix: corrige geracao do swagger
